src/css/custom.css
._pendota-outline_,
._pendota-outline_:hover,
._pendota-outline_:visited,
._pendota-outline_:active,
._pendota-outline_::before,
._pendota-outline_::after {
    outline: 2px dashed #028cc2;
}

/* Reset css for all pendota elements */
#_pendota-wrapper_,
#_pendota-wrapper_ *,
#_pendota-wrapper_ a:hover,
#_pendota-wrapper_ a:visited,
#_pendota-wrapper_ a:active,
#_pendota-wrapper_ *:focus {
	background:none;
	border:none;
    bottom:auto;
    box-shadow: none;
    box-sizing: border-box;
    clear:none;
    color: #222222;
    cursor:default;
    fill: none;
    float:none;
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
	font-size:medium;
	font-style:normal;
	font-weight:normal;
	left:auto;
	letter-spacing:normal;
    line-height:normal;
    margin: 0;
	max-height:none;
	max-width:none;
	min-height:0;
	min-width:0;
    overflow:visible;
    padding: 0;
	position:static;
    right:auto;
	text-align:left;
	text-decoration:none;
	text-indent:0;
	text-transform:none;
    top:auto;
    vertical-align: middle;
	visibility:visible;
    white-space:normal;
}

#_pendota-wrapper_ {
    position: fixed;
    z-index: 99999999999;
}

#_pendota-wrapper_ ._pendota_container_ {
    max-height: 600px;
    overflow-y: scroll;
    min-height: 450px;
    max-width: 380px;
    width: 380px;
    border: 2px solid rgba(0,0,0,0.3);
    border-radius: 7px;
    background: white;
    padding: 10px 20px;
    margin: 0;
    position: absolute;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;  
}

#_pendota-wrapper_ ._pendota-draggable_ {
    touch-action: none;
    user-select: none;
}

#_pendota-wrapper_ #_pendota_header_div_ {
    padding-top: 0px;
    margin: 0 auto;
}

#_pendota-wrapper_ #_pendota-lock-icon_ {
    vertical-align: middle;
}

#_pendota-wrapper_ ._pendota-feather-locked_ {
    height: 18px;
    width: 18px;
    stroke: #222222;
}

#_pendota-wrapper_ ._pendota-icon-locked_ * {
    cursor: pointer;
}

#_pendota-wrapper_ ._pendota-feather-unlocked_ {
    height: 18px;
    width: 18px;
    stroke: #a9a9a9;
}

#_pendota-wrapper_ #_pendota-tag-assistant_ {
    display: block;
    position:fixed;
    top:15px;
    right:15px;
    margin: 0 auto;
    z-index: 99999999999;
}

#_pendota-wrapper_ #_pendota_status_ {
    /* avoid an excessively wide status text */
    font-size: 11px;
    margin: 0 auto;
    min-height: 32px;
    padding-left: 5px;
    padding-top: 5px; 
}

#_pendota-wrapper_ ._pendota-button_ {
    background-color: #229ca8;
    color: #fff;
    transition: 0.3s;
    float: right;
    border-radius: 3px;
    padding: 5px 10px;
    font-size: 16px;
}

#_pendota-wrapper_ ._pendota-button_:hover {
    background-color: #718098;
    border-color: #718098;
    color: #fff;
}

#_pendota-wrapper_ h3._pendota_ {
    color: #ec2059;
    font-weight: 700;
    font-size: 24px;
    padding-left: 20px;
    margin: 0 auto;
}

#_pendota-wrapper_ h5._pendota_  {
    font-size: 16px;
    font-weight: 700;
    display: inline-block;
    padding-bottom: 5px;
}

#_pendota-wrapper_ ._pendota_form-control_ {
    border-radius: 4px;
    padding: 5px;
    background-color: #efefef;
    width: 100%;
    font-size: 12px;
    margin: 0 auto;
}

#_pendota-wrapper_ #_pendota-sizzler_ {
    background: #fff;
    border: 1px solid #ccc;
    border-radius: 4px;
    margin: 8px auto;
}

#_pendota-wrapper_ #_pendota-sizzler-icon_ {
    background: #e7e7e7;
    border: 1px solid #555;
    border-radius: 4px;
    font-size: 12px;
    margin: 8px auto;
    padding: 5px 8px;
    text-align: center;
    width: 100%;
}

#_pendota-wrapper_ #_pendota-sizzler-icon_._pendota-clicked {
    background: #555;
    color: white;
}

#_pendota-wrapper_ ._pendota_row-header_ {
    padding-top: 10px;
    margin: 0 auto;
    padding-bottom: 5px;
    display: flex;
    justify-content: space-between;
}

#_pendota-wrapper_ ._pendota-arrow-block_ {
    padding-right: 35px;
}

#_pendota-wrapper_ ._pendota-parent-arrow_ {
    height: 20px;
}

#_pendota-wrapper_ ._pendota-hide-arrow_ {
    display: none;
}

#_pendota-wrapper_ ._pendota-active-arrow_,
#_pendota-wrapper_ ._pendota-active-arrow_ * {
    display: inline-block;
    stroke: #222222;
    cursor: pointer !important;
}

#_pendota-wrapper_ ._pendota-disabled-arrow_ {
    display: inline-block;
    stroke: #a9a9a9;
}

#_pendota-wrapper_ ._pendota_input-row_ {
    margin: 0 auto;
    padding-bottom: 5px;
}

#_pendota-wrapper_ #_pendota_target-img_ {
    width: 40px;
    margin: 0 auto;
}

#_pendota-wrapper_ #_pendota_exit_img_ {
    stroke: #aaaaaa;
}

#_pendota-wrapper_ #_pendota_exit_img_container_ {
    width: 24px;
    margin: 0 auto;
}

#_pendota-wrapper_ #_pendota_exit_img_,
#_pendota-wrapper_ #_pendota_exit_img_ * {
    cursor: pointer;
}

#_pendota-wrapper_ #_pendota_title_ {
    padding-bottom: 10px;
    margin: 0 auto;
}

#_pendota-wrapper_ #_pendota_header-div_ {
    margin: 10px 0 5px;
}

#_pendota-wrapper_ ._pendota-copy-icon_ {
    cursor: pointer;
}

#_pendota-wrapper_ #_pendota-button-fix_ {
    padding-top: 8px;
    padding-bottom: 11px;
}

